@@ -1,3 +1,4 @@
 -aded Player hud component
 -added CFont setting to Players and made players with strength show in red
 -added CFont setting to PotionEffects
+-added TotemPopCounter
